[project]
name = "databricks-ai-bridge"
version = "0.10.0.dev0"
description = "Official Python library for Databricks AI support"
authors = [
    { name="Databricks", email="agent-feedback@databricks.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typing_extensions",
  "pydantic",
  "databricks-sdk>=0.49.0",
  "databricks-vectorsearch>=0.57",
  "pandas",
  "tiktoken>=0.8.0",
  "tabulate>=0.9.0",
  "mlflow-skinny>=2.19.0",
]

[project.license]
file = "LICENSE.txt"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "src/*"
]

[tool.hatch.build.targets.wheel]
packages = ["src/databricks_ai_bridge"]

[project.optional-dependencies]
dev = [
  "hatch",
  "pytest",
  "mlflow",
  "ruff==0.12.10",
  "pytest-asyncio",
]
doc = [
  "docutils>=0.21.2",
  "sphinx>=8.1.3",
  "sphinx-autobuild>=2024.10.3",
  "sphinx_rtd_theme>=3.0.1",
  "jinja2>=3.0.0",
  "MarkupSafe>=3.0.2",
  "commonmark>=0.9.1",
  "myst-parser>=4.0.0",
  "autodoc_pydantic>=2.2.0",
]
lint = [
  "ruff==0.12.10",
]

memory = [
  "psycopg[binary,pool]>=3.1",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
  # isort
  "I",
  # bugbear rules
  "B",
  # remove unused imports
  "F401",
  # bare except statements
  "E722",
  # print statements
  "T201",
  "T203",
  # misuse of typing.TYPE_CHECKING
  "TCH004",
  # import rules
  "TID251",
  # undefined-local-with-import-star
  "F403",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = ["src"]
